--- a/requirements.txt
+++ b/requirements.txt
@@ -1,111 +1,8 @@
-altgraph==0.17.4
-arrow==1.2.2
-astor==0.8.1
-attrs==21.4.0
-autopep8==1.6.0
-bandit==1.7.4
-binaryornot==0.4.4
-black==22.1.0
-CacheControl==0.12.10
-cachy==0.3.0
-certifi==2021.10.8
-cfgv==3.3.1
-chardet==4.0.0
-charset-normalizer==2.0.12
-cleo==0.8.1
-click==8.0.4
-clikit==0.6.2
-cookiecutter==1.7.3
-crashtest==0.3.1
-darglint==1.8.1
-distlib==0.3.4
-docutils==0.18.1
-eradicate==2.0.0
-filelock==3.6.0
-flake8==4.0.1
-flake8-bandit==2.1.2
-flake8-broken-line==0.4.0
-flake8-bugbear==21.11.29
-flake8-commas==2.1.0
-flake8-comprehensions==3.8.0
-flake8-debugger==4.0.0
-flake8-docstrings==1.6.0
-flake8-eradicate==1.2.0
-flake8-isort==4.1.1
-flake8-polyfill==1.0.2
-flake8-quotes==3.3.1
-flake8-rst-docstrings==0.2.5
-flake8-string-format==0.3.0
-gitdb==4.0.9
-GitPython==3.1.27
-html5lib==1.1
-identify==2.4.11
-idna==3.3
-importlib-metadata==4.11.2
-iniconfig==1.1.1
-isort==5.10.1
-Jinja2==2.11.3
-jinja2-git==1.1.0
-jinja2-time==0.2.0
-keyring==23.5.0
-lice==0.6
-lockfile==0.12.2
-macholib==1.16.3
-MarkupSafe==2.0.1
-mccabe==0.6.1
-msgpack==1.0.3
-mypy==0.940
-mypy-extensions==0.4.3
-nodeenv==1.6.0
-numpy==1.24.3
-opencv-python==4.8.1.78
-packaging==23.2
-pastel==0.2.1
-pathspec==0.9.0
-pbr==5.8.1
-pep8-naming==0.12.1
-pexpect==4.8.0
-Pillow==10.1.0
-pkginfo==1.8.2
-platformdirs==2.5.1
-pluggy==1.0.0
-poetry==1.1.13
-poetry-core==1.0.8
-poyo==0.5.0
-pre-commit==2.17.0
-ptyprocess==0.7.0
-py==1.11.0
-pycodestyle==2.8.0
-pydocstyle==6.1.1
-pyflakes==2.4.0
-Pygments==2.11.2
-pyinstaller==6.2.0
-pyinstaller-hooks-contrib==2023.10
-pylev==1.4.0
-pymongo==4.0.2
-pyparsing==3.0.7
-pytesseract==0.3.10
-pytest==7.0.1
-python-dateutil==2.8.2
-python-slugify==6.1.1
-PyYAML==6.0
-requests==2.27.1
-requests-toolbelt==0.9.1
-restructuredtext-lint==1.4.0
-shellingham==1.4.0
-six==1.16.0
-smmap==5.0.0
-snowballstemmer==2.2.0
-stevedore==3.5.0
-testfixtures==6.18.5
-text-unidecode==1.3
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.10.0
-typing_extensions==4.1.1
-urllib3==1.26.8
-virtualenv==20.13.3
-webencodings==0.5.1
-wemake-python-styleguide==0.16.0
-zipp==3.7.0
+opencv-python~=4.8.1.78
 matplotlib==3.8.0
+
+numpy~=1.26.2
+future~=0.18.2
+Pillow~=10.1.0
+pytesseract~=0.3.10
+tk=0.1.0
